# rum

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rum.toml
.cargo/: config.toml
crates/agent/: Cargo.toml
crates/agent/src/: log_layer.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  bootstrap.rs  client.rs  control.rs  cp.rs  destroy.rs  down.rs  exec.rs  exit.rs  ipc.rs  lib.rs  log.rs  main.rs  network.rs  protocol.rs  render.rs  restart.rs  server.rs  status.rs
crates/cli/src/render/: plain.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  network_xml.rs  support.rs  tests.rs
crates/domain/src/domain_xml/: build.rs  tests.rs
crates/guest/: Cargo.toml
crates/guest/src/: agent.rs  lib.rs  log_layer.rs  main.rs
crates/guest/src/client/: error.rs  exec.rs  file_transfer.rs  mod.rs  provision.rs  transport.rs
crates/guestagent/: Cargo.toml
crates/guestagent/src/: log_layer.rs  main.rs
crates/machine/: Cargo.toml
crates/machine/src/: cloudinit.rs  error.rs  guest.rs  image.rs  instance.rs  layout.rs  lib.rs  overlay.rs  paths.rs  qcow2.rs  state.rs  util.rs
crates/machine/src/agent_client/: exec.rs  file_transfer.rs  mod.rs  provision.rs  services.rs  transport.rs
crates/machine/src/backend/: api.rs  libvirt.rs
crates/machine/src/config/: load.rs  mod.rs  runtime.rs  validate.rs
crates/machine/src/driver/: libvirt.rs  mod.rs
crates/machine/src/provider/: libvirt.rs
crates/machine/src/vm/: agent.rs  boot.rs  destroy.rs  mod.rs  prepare.rs  shutdown.rs  ssh.rs
crates/machine/src/vm/libvirt/: core.rs  mod.rs  networks.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: driver.rs  instance.rs  lib.rs  lifecycle.rs  setup.rs
issues/: 000f5d08-provision-types-system-first-boot-and-boot-every-boot.md  017fa41d-rum-up-exits-instead-of-showing-auto-login-shell.md  0201f9ba-refactor-tests-to-use-insta-snapshot-testing.md  020f11d3-use-tokio-main-macro-instead-of-manual-runtime.md  032e6290-all-commands-must-work-in-non-interactive-pipes-and-scripts.md  042ee8d2-agent-tracing-and-log-forwarding-to-host.md  05a5d038-keyboard-shortcuts-during-boot-wait.md  0c7caf77-replace-string-templated-domain-xml-with-structured-xml-generation.md  0cff0370-document-provision-boot-redeploy-pattern-in-skill-doc.md  0dca733d-system-provisioning-runs-on-every-boot-instead-of-first-boot-only.md  11f75739-up-command-name-argument-silently-ignored.md  1503e1bf-vm-reboots-unnecessarily-after-first-boot.md  1cc70306-json-output-mode-for-agent-friendly-structured-output.md  1fe02889-boot-scripts-skipped-on-subsequent-boots.md  22554152-benchmark-vsock-throughput-and-latency.md  22a8d7fa-replace-cloud-init-string-concatenation-with-facet-value-structured-yaml.md  230abd52-refactor-build-user-data-to-take-a-config-struct-instead-of-positional-args.md  2568adcd-auto-login-on-serial-console-after-boot.md  295fd927-vm-lifecycle-and-state-management-improvements.md  2c3b8726-rum-skill-command-generate-agent-friendly-docs-for-llm-tooling.md  2dcdb5b3-move-provisioning-script-execution-to-rum-agent.md  307566fa-refactor-up-control-flow-from-scattered-atomics-to-a-state-machine.md  325489d1-vm-name-not-validated-path-traversal-and-xml-injection.md  32be92b7-unnecessary-allow-attributes-and-unwraps.md  3969de54-base-image-download-shows-as-skipped-instead-of-checkmarked.md  403b7fe3-add-rum-provision-command-to-re-run-provisioning-scripts-on-a-running-vm.md  40f35133-support-default-workdir-mount-for-automatic-working-directory.md  421138ac-rum-destroy-shows-libvirt-error-for-nonexistent-domain.md  48d2425a-extra-drives-support.md  4fde917e-configurable-user-groups-and-roles-for-vm-provisioning.md  52225cf1-hot-reload-config-changes-via-agent-without-vm-restart.md  5316c01f-provision-script-lines-not-properly-yaml-escaped-in-cloud-init.md  5739a803-ctrl-c-during-first-boot-should-destroy-vm-state.md  58f9c7da-rum-exec-prints-agent-readiness-log-line-to-stdout.md  595c06e8-provisioning-retry-with-automatic-rollback.md  597ba711-second-rum-up-on-previously-provisioned-vm-should-enter-ready-phase-immediately.md  5adcbf37-remove-packages-field-from-provision-config.md  60d3524a-unquoted-paths-in-generated-drive-shell-scripts.md  60d8296d-consolidate-progress-steps-into-user-friendly-messages.md  6215eef7-integration-test-library-for-cargo-test.md  (+38 more)
rum-agent/: Cargo.toml
rum-agent/src/: lib.rs  log_layer.rs  main.rs
scripts/: create-issue.sh
src/: agent.rs  cli.rs  cloudinit.rs  config.rs  daemon.rs  domain_xml.rs  error.rs  image.rs  init.rs  iso9660.rs  lib.rs  logging.rs  main.rs  network_xml.rs  overlay.rs  paths.rs  phase.rs  progress.rs  qcow2.rs  registry.rs  replicon.rs  skill.rs  vm_state.rs  watch.rs  workers.rs
src/agent/: exec.rs  file_transfer.rs  mod.rs  provision.rs  services.rs  transport.rs
src/app/: client.rs  mod.rs  output.rs  run.rs  tracing.rs
src/backend/: libvirt.rs  mod.rs
src/commands/: client.rs  daemon_client.rs  destroy.rs  log.rs  mod.rs  provision.rs  serve.rs  status.rs
src/config/: identity.rs  load.rs  mod.rs  runtime.rs  schema.rs  tests.rs
src/daemon/: client.rs  mod.rs  rpc.rs  serve.rs  service.rs
src/domain_xml/: build.rs  mod.rs  model.rs  support.rs  tests.rs
src/flow/: destroy.rs  event_loop.rs  first_boot.rs  mod.rs  reattach.rs  reboot.rs  reprovision.rs  shutdown.rs
src/init/: backend_check.rs  errors.rs  flow.rs  mod.rs  model.rs  prompts.rs  run.rs  toml.rs
src/lifecycle/: agent.rs  destroy.rs  first_boot.rs  machine.rs  messages.rs  mod.rs  prepare.rs  provision.rs  reattach.rs  reboot.rs  reprovision.rs  shutdown.rs  stop.rs  terminal.rs
src/observer/: interactive.rs  json.rs  mod.rs  plain.rs
src/render/: format.rs  interactive.rs  json.rs  mod.rs  plain.rs  plugin.rs  state.rs
src/vm/: agent.rs  destroy.rs  mod.rs  prepare.rs  services.rs  shutdown.rs  ssh.rs
src/vm/libvirt/: core.rs  networks.rs
tests/: cli.rs
