[workspace]
members = ["rum-agent"]

[package]
name = "rum"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
facet = "0.43"
facet-toml = "0.43"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
indicatif = "0.17"
console = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
dirs = "6"
virt = "0.4"
futures-util = "0.3"
facet-value = "0.43"
facet-yaml = "0.43"
facet-xml = "0.43"
facet-json = "0.43"
inquire = "0.7"
ssh-key = { version = "0.6", features = ["ed25519", "rand_core", "getrandom"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rum-agent = { path = "rum-agent", artifact = "bin", lib = true, target = "x86_64-unknown-linux-musl" }
tokio-vsock = "0.7"
tokio-util = { version = "0.7", features = ["codec"] }
roam = "0.6"
roam-stream = "0.6"
bevy = { version = "0.18", default-features = false, features = ["multi_threaded", "bevy_state", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
seldom_state = { git = "https://github.com/Wiwip/seldom_state.git", rev = "cc6c89f" }
bevy_replicon = { version = "0.39", default-features = false, features = ["server", "client"] }
interprocess = { version = "2.4", features = ["tokio"] }
ecsdk_core = { path = "/home/jonas/Development/Rust/ecstest/crates/ecsdk_core" }
ecsdk_app = { path = "/home/jonas/Development/Rust/ecstest/crates/ecsdk_app" }
ecsdk_tasks = { path = "/home/jonas/Development/Rust/ecstest/crates/ecsdk_tasks" }
ecsdk_macros = { path = "/home/jonas/Development/Rust/ecstest/crates/ecsdk_macros" }
ecsdk_replicon = { path = "/home/jonas/Development/Rust/ecstest/crates/ecsdk_replicon" }
ecsdk_replicon_transport = { path = "/home/jonas/Development/Rust/ecstest/crates/ecsdk_replicon_transport" }
ecsdk_tracing = { path = "/home/jonas/Development/Rust/ecstest/crates/ecsdk_tracing" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
