[workspace]
members = [
    "crates/cli",
    "crates/guest",
    "crates/domain",
    "crates/machine",
    "crates/orchestrator",
]

resolver = "2"

[workspace.dependencies]
guest = { path = "crates/guest", artifact = "bin", lib = true, target = "x86_64-unknown-linux-musl" }
domain = { path = "crates/domain" }
machine = { path = "crates/machine" }
orchestrator = { path = "crates/orchestrator" }

async-trait = "0.1"
bevy = { version = "0.18", default-features = false, features = ["multi_threaded", "bevy_state"] }
dirs = "6"
ecsdk = { git = "https://github.com/Nohac/ecsdk", features = ["app", "tasks", "network", "macros"] }
facet = "0.43"
facet-toml = "0.43"
facet-value = "0.43"
facet-xml = "0.43"
facet-yaml = "0.43"
futures-util = "0.3"
indicatif = "0.17"
miette = "7"
rand_core = "0.6"
roam = "0.6"
roam-stream = "0.6"
serde = { version = "1", features = ["derive"] }
ssh-key = "0.6"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-vsock = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
seldom_state = { git = "https://github.com/Wiwip/seldom_state.git", rev = "cc6c89f" }
virt = "0.4"
